Partner icon IE fixed

--- a/sass/copyright.scss
+++ b/sass/copyright.scss
@@ -11,8 +11,8 @@
 }
 
 .copyright__link {
-  width: 27px;
-  height: 34px;
+  width: 26.943px;
+  height: 34.09px;
   margin-left: 30px;
 
   font-size: 0;
